--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <button class="nav-link  fs-5 me-2 m3-md-4" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Black</button>
               </li>
               <li class="nav-item" role="presentation">
-                <button class="nav-link  fs-5 me-2 m3-md-4" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">Pink</button>
+                <button class="nav-link  fs-5 me-2 m3-md-4" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">White</button>
               </li>
               
             </ul>
